[gd_scene load_steps=8 format=3 uid="uid://tka4naqfc3cr"]

[ext_resource type="Texture2D" uid="uid://cmdo48h6i133y" path="res://assets/sprites/recipe_list/recipe_list_bg.png" id="1_5xwwp"]
[ext_resource type="Script" path="res://ui/brewing_interface/recipe_list.gd" id="1_l5860"]
[ext_resource type="FontFile" uid="uid://bp0f602ussbj6" path="res://assets/fonts/Play-Bold.ttf" id="2_wg0rn"]
[ext_resource type="Texture2D" uid="uid://c1kfwomtvybks" path="res://assets/sprites/recipe_list/arrow_normal.png" id="6_t8ffj"]
[ext_resource type="FontFile" uid="uid://bp2muca7vksd5" path="res://assets/fonts/Play-Regular.ttf" id="7_11hdv"]
[ext_resource type="Texture2D" uid="uid://c0bekgmdnbxl6" path="res://assets/sprites/recipe_list/arrow_pressed.png" id="7_ocgir"]
[ext_resource type="Texture2D" uid="uid://bg3gba5ihcktf" path="res://assets/sprites/recipe_list/arrow_hover.png" id="8_ka4co"]

[node name="RecipeList" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_l5860")

[node name="CallList" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 1830.0
offset_top = 90.0
offset_right = 1880.0
offset_bottom = 128.0
pivot_offset = Vector2(25, 19)
texture_normal = ExtResource("6_t8ffj")
texture_pressed = ExtResource("7_ocgir")
texture_hover = ExtResource("8_ka4co")
ignore_texture_size = true
stretch_mode = 5
flip_h = true

[node name="BG" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -412.0
offset_top = 90.0
offset_right = -90.0
offset_bottom = 719.0
grow_horizontal = 0
texture = ExtResource("1_5xwwp")

[node name="Prev" type="TextureButton" parent="BG"]
layout_mode = 0
offset_left = 22.0
offset_top = 45.0
offset_right = 55.0
offset_bottom = 70.0
texture_normal = ExtResource("6_t8ffj")
texture_pressed = ExtResource("7_ocgir")
texture_hover = ExtResource("8_ka4co")
flip_h = true

[node name="Next" type="TextureButton" parent="BG"]
layout_mode = 0
offset_left = 267.0
offset_top = 45.0
offset_right = 300.0
offset_bottom = 70.0
texture_normal = ExtResource("6_t8ffj")
texture_pressed = ExtResource("7_ocgir")
texture_hover = ExtResource("8_ka4co")

[node name="Name" type="Label" parent="BG"]
layout_mode = 0
offset_left = 34.0
offset_top = 115.0
offset_right = 287.0
offset_bottom = 178.0
theme_override_fonts/font = ExtResource("2_wg0rn")
theme_override_font_sizes/font_size = 20
horizontal_alignment = 1
vertical_alignment = 1

[node name="Base" type="Label" parent="BG"]
layout_mode = 0
offset_left = 92.0
offset_top = 249.0
offset_right = 288.0
offset_bottom = 312.0
theme_override_fonts/font = ExtResource("7_11hdv")
theme_override_font_sizes/font_size = 20
horizontal_alignment = 1
vertical_alignment = 1

[node name="Additive1" type="Label" parent="BG"]
layout_mode = 0
offset_left = 92.0
offset_top = 383.0
offset_right = 288.0
offset_bottom = 446.0
theme_override_fonts/font = ExtResource("7_11hdv")
theme_override_font_sizes/font_size = 20
horizontal_alignment = 1
vertical_alignment = 1

[node name="Additive2" type="Label" parent="BG"]
layout_mode = 0
offset_left = 92.0
offset_top = 517.0
offset_right = 288.0
offset_bottom = 580.0
theme_override_fonts/font = ExtResource("7_11hdv")
theme_override_font_sizes/font_size = 20
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="CallList" to="." method="_on_call_list_pressed"]
[connection signal="pressed" from="BG/Prev" to="." method="_on_prev_pressed"]
[connection signal="pressed" from="BG/Next" to="." method="_on_next_pressed"]
